packages/svelte/tests/validator/samples/svelte-ignore-non-reactive-update/input.svelte
<svelte:options runes />

<script>
	// svelte-ignore non_reactive_update
	let value;

	value="";
</script>

{value}