packages/svelte/tests/compiler-errors/samples/runes-before-after-update/main.svelte
<svelte:options runes />

<script>
	import { beforeUpdate, afterUpdate } from 'svelte';
</script>
